--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header {
 
 header h1 {
     font-size: 18px;
-    color: #28a745; 
+    color: '#046492'; 
 }
 
 header p {
@@ -97,7 +97,7 @@ main {
 
 /* Button Styling */
 button {
-    background-color: #28a745; 
+    background-color: #046492; 
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -111,11 +111,11 @@ button {
 }
 
 button:hover {
-    background-color: #218838; 
+    background-color: #046577; 
 }
 
 button:focus {
-    outline: 2px solid #0056b3; 
+    outline: 2px solid #046492; 
     outline-offset: 2px;
 }
 
@@ -124,4 +124,12 @@ footer {
     text-align: center;
     font-size: 10px;
     color: #777;
+}
+#download-report {
+    color: blue;
+    text-decoration: underline;
+    cursor: pointer;
+}
+#download-report:hover {
+    text-decoration: none;
 }
